# HWsqlcpp

./: README.md
Less_1/Task_1/: README.md
Less_2/Task_1/: DB music.md  README.md
Less_2/Task_2/: CREATE TABLE employee.md  README.md
Less_4/: CREATE.sql  INSERT.sql  README.md  SELECT.sql
Less_5/Task_1/: CMakeLists.txt  README.md  SQL.cpp  SQL.h  main.cpp
